--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
     "googleapis": "^144.0.0",
+    "node-cron": "^3.0.3",
     "path": "^0.12.7"
   }
 }
